--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Node / frontend
-frontend/node_modules/
-frontend/dist/
-frontend/.vite/
-frontend/.turbo/
+node_modules/
+dist/
+.vite/
+.turbo/
 
 # Logs
 *.log
